salesforce-main/src/main/default/objects/Opportunity_Product__c/Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Product Catalog Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>PCItem #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Catalog Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>