salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Id__c</fullName>
    <label>Bundle Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>