salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>