salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <formula>Product__r.BNR_Campus_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus Code</label>
    <type>Text</type>
</CustomField>