salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Campus_Description__c.field-meta.xml
<CustomField>
    <fullName>Campus_Description__c</fullName>
    <formula>Product__r.BNR_Campus_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus Description</label>
    <type>Text</type>
</CustomField>