salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Course_Focus__c.field-meta.xml
<CustomField>
    <fullName>Course_Focus__c</fullName>
    <label>Course Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>