salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>Degree_Code__c</fullName>
    <formula>Product__r.BNR_Degree_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Code</label>
    <type>Text</type>
</CustomField>