salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study__c</fullName>
    <formula>Product__r.Programme__r.BNR_FieldOfStudy_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field of Study</label>
    <type>Text</type>
</CustomField>