salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Level_Code__c</fullName>
    <formula>Product__r.BNR_Level_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Code</label>
    <type>Text</type>
</CustomField>