salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/PC_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>PC_Item_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Item Name</label>
    <type>Text</type>
</CustomField>