salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>Product__r.BNR_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>