salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Catalog Items</relationshipLabel>
    <relationshipName>Product_Catalog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>