salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <formula>Product__r.BNR_Program_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>