salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <formula>Product__r.Programme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme</label>
    <type>Text</type>
</CustomField>