salesforce-main/src/main/default/objects/Opportunity_Product__c/fields/Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Term_Code__c</fullName>
    <formula>Product__r.BNR_Term_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Code</label>
    <type>Text</type>
</CustomField>